[tool.poetry]
name = "lesson-counter"
version = "0.1.0"
description = ""
authors = ["Ivan Sadílek <sadilekivan@gmail.com>"]
# readme = "README.md"
# license = "BSD"
# packages = [
#   { include = "src" }
# ]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
